[gd_scene load_steps=11 format=3 uid="uid://b5uc6qfh6miet"]

[ext_resource type="StyleBox" uid="uid://ck8x0ojn261w3" path="res://Resources/Themes/PanelContainer-Light.tres" id="1_5p0si"]
[ext_resource type="Texture2D" uid="uid://bu7c1a68177br" path="res://Resources/Textures/Image.svg" id="1_20btv"]
[ext_resource type="Script" uid="uid://gmw6ix0ht4ou" path="res://Scripts/Message/MessageCard.gd" id="1_n4bih"]
[ext_resource type="PackedScene" uid="uid://ci8hbvggabgnh" path="res://Scenes/ImageUrlLoader.tscn" id="2_u0a0q"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="3_5oost"]
[ext_resource type="SystemFont" uid="uid://qgdcrj7r5eya" path="res://Resources/Fonts/SystemFontBold.tres" id="5_pxg82"]
[ext_resource type="Theme" uid="uid://cbw1oejoid3q4" path="res://Resources/Themes/FlatButton-Light.tres" id="6_bql1m"]
[ext_resource type="SystemFont" uid="uid://cet1proxcxegx" path="res://Resources/Fonts/SystemFontMedium.tres" id="6_mkxi2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdpl1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n70re"]
bg_color = Color(0.758192, 0.758192, 0.758191, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MessageCard" type="PanelContainer"]
custom_minimum_size = Vector2(512, 0)
offset_right = 512.0
offset_bottom = 72.0
theme_override_styles/panel = ExtResource("1_5p0si")
script = ExtResource("1_n4bih")

[node name="ThemePainter" parent="." instance=ExtResource("3_5oost")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mask" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_children = 1
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jdpl1")

[node name="AvatarTexture" parent="MarginContainer/VBoxContainer/HBoxContainer/Mask" instance=ExtResource("2_u0a0q")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_20btv")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NicknameLabel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_bql1m")
theme_override_fonts/font = ExtResource("5_pxg82")
theme_override_font_sizes/font_size = 22
text = "Nickname"
flat = true
alignment = 0
text_overrun_behavior = 3

[node name="ThemePainter" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/NicknameLabel" instance=ExtResource("3_5oost")]

[node name="LinkButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_bql1m")
theme_override_fonts/font = ExtResource("6_mkxi2")
text = "QueryType"
flat = true
alignment = 0

[node name="ThemePainter" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LinkButton" instance=ExtResource("3_5oost")]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("6_mkxi2")
autowrap_mode = 2
max_lines_visible = 3

[node name="ThemePainter" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/ContentLabel" instance=ExtResource("3_5oost")]

[node name="CommentPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n70re")

[node name="CommentLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/CommentPanel"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("6_mkxi2")
autowrap_mode = 2
max_lines_visible = 1

[node name="ThemePainter" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/CommentPanel/CommentLabel" instance=ExtResource("3_5oost")]

[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/Mask" to="." method="_on_avatar_texture_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/NicknameLabel" to="." method="_on_nickname_label_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/LinkButton" to="." method="_on_link_button_pressed"]
